<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications"
            android:title="Reminders" />
        <ListPreference
            app:dependency="notifications"
            app:defaultValue="30 Minutes"
            android:defaultValue="1"
            android:entries="@array/notification_entries"
            android:entryValues="@array/notification_values"
            android:key="list_preference_1"
            app:useSimpleSummaryProvider="true"
            android:title="List preference" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>